# BIP

./: README.md
BIP_Frontend/: package.json
backend/: Dockerfile  db.sqlite3  docker-compose.yml  entrypoint.sh  pyproject.toml
backend/core/: celery.py  settings.py  urls.py
backend/nordpool/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/nordpool/migrations/: 0001_initial.py  0002_serverdata.py  0003_alter_serverdata_server_id.py  0004_calculatedresult.py  0005_simulatedbattery.py  0006_simulatedsolarandgridpower.py  0007_optimizationdecision.py
frontend/: index.html
